# Aesculap-hermes

./: AGENT.md  Aesculap_PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
aesculap/: __init__.py  __main__.py  config.py  daemon.py  debounce.py  events.py  lockfile.py  pipeline.py  types.py
aesculap/audit/: log.py
aesculap/detectors/: log_watcher.py  periodic.py
aesculap/gate/: blast_radius.py  escalation.py  scope.py  tripwires.py
aesculap/install/: capabilities.py  detect.py  systemd_unit.py  wizard.py
aesculap/llm/: base.py  providers.py
aesculap/notify/: dedup.py  message.py  notifier.py
aesculap/probes/: base.py  builtin.py  registry.py
aesculap/remediate/: backup.py  coding_agent.py  executor.py  selffix.py  verify.py
aesculap/resources/: aesculap.service.tmpl  config.example.yaml
aesculap/triage/: prompt.py  schema.py  triager.py
tests/: test_audit.py  test_backup.py  test_blast_radius.py  test_capabilities.py  test_cli.py  test_coding_agent.py  test_config.py  test_daemon.py  test_daemon_notify.py  test_debounce.py  test_escalation.py  test_executor.py  test_install_detect.py  test_lockfile.py  test_log_watcher.py  test_notifier.py  test_notify_dedup.py  test_notify_message.py  test_pipeline.py  test_probes.py  test_scope.py  test_selffix.py  test_systemd_unit.py  test_triage_schema.py  test_triager.py  test_tripwires.py  test_verify.py  test_wizard.py
